templates/service/k8s/components/edge-gcp/patch-service-backendconfig.yaml
apiVersion: v1
kind: Service
metadata:
  name: "{@ service_kebab @}-service"
  annotations:
    cloud.google.com/backend-config: '{"default": "{@ service_kebab @}-backend-config"}'
